# ec

./: .gitignore  .pre-commit-config.yaml  README.md  clip_trace.py  e2ude_config.defaults.toml  e2ude_config.example.toml  e2ude_config.refresh.example.toml  e2ude_config.toml  etl_context.py  global_config.toml  pyproject.toml  summarize_trace.py
docs/: architecture.md  cli-workflows.md  data-refresh.md  incremental-ingest-plan.md  parser-ux-cli-plan.md  plugin-development.md  release-and-artifact-execution-plan.md  semantic-compression-plan.md
scripts/: cleanup_mssql_schema.py  drop_all_danger.sql  find_new_zips.py  gen_rsm_fixture.py  measure_discovery.py  preview_parser.py  promote_schema.py  refresh-data.ps1  run_fixture_zip_e2e.py  scan_rsm.py  seed_legacy_schema.py  swap_schemas.sql
src/e2ude_core/: cli.py  config.py  context.py  logging_conf.py  logging_mp.py  main.py  registry.py  runtime_files.py
src/e2ude_core/db/: access.py  base_session.py  schema_safety.py  setup.py
src/e2ude_core/db/models/: __init__.py  file.py  manager.py  rsm_engine_on_off.py  rsm_mcdata.py  rsm_segments.py  rsm_tmptr.py
src/e2ude_core/orchestration/: catalog.py  managers.py  pipeline.py  runs.py  scopes.py  spec.py  state.py  workflow.py
src/e2ude_core/pipelines/: base.py  cleaning.py  contexts.py  protocols.py  scanner.py
src/e2ude_core/pipelines/parsers/: __init__.py  engine_on_off.py  mc_data.py  mc_data_scrape.py  segments.py  tmptr.py
src/e2ude_core/services/: catalog.py  discovery.py  file_catalog.py  fs_engine.py  fs_scanner.py  zip_io.py
src/etude_core/: config.py  context.py  main.py  registry.py
src/etude_core/db/: access.py  base.py  base_session.py  models.py  setup.py
src/etude_core/orchestration/: managers.py  scopes.py  state.py  workflow.py
src/etude_core/pipelines/: base.py  cleaning.py  contexts.py  protocols.py  scanner.py
src/etude_core/services/: zip_io.py
tests/: conftest.py  test_acaws.py  test_adversarial_e2e.py  test_cli.py  test_file_catalog.py  test_local_integration.py  test_parse_mcdata.py  test_parse_runtime_handlers.py  test_parse_segments.py  test_preview_parser.py  test_runtime_regressions.py  test_seed_legacy_schema.py  test_segment_etl.py  test_zip_extract.py  test_zip_manager.py
(+10 files in other folders)
