[build-system]
# Tells pip/uv to use setuptools to build your package
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "e2d-core"
version = "0.1.0"
description = "HCD-ETL framework for processing and deduplicating file archives."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    # --- FIXES ---
    "numpy>=1.26.0",
    # pyodbc (required by SQLAlchemy for MSSQL)
    "pyodbc>=5.0.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
# Renamed from [dependency-groups] to the PEP 621 standard
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
]

[tool.setuptools]
# This line tells setuptools that your packages are in the 'src' directory
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# This automatically finds all packages (etude_core, etude_core.db, etc.)
# under the 'src' directory.
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
]

[tool.ruff]
# Extend this list for any directories that are not part of your
# source distribution (e.g., deployment scripts, notebooks, tests).
exclude = [
    "scripts/",
    "tests/",
    "venv/",
    "__pypackages__/",
]
